--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@boringcrypto/boring-solidity": "boringcrypto/BoringSolidity#e06e943",
-    "@honkswapdex/sdk": "^0.0.14",
+    "@honkswapdex/sdk": "^0.0.15",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
@@ -59,13 +59,14 @@
     "ethers": "^5.0.0",
     "hardhat": "2.0.11",
     "hardhat-abi-exporter": "^2.0.8",
-    "hardhat-deploy": "^0.7.0-beta.44",
+    "hardhat-deploy": "^0.9.24",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "hardhat-gas-reporter": "^1.0.0",
     "hardhat-preprocessor": "^0.1.0",
     "hardhat-spdx-license-identifier": "^2.0.0",
     "hardhat-typechain": "^0.3.5",
     "hardhat-watcher": "^2.0.0",
+    "mocha": "^9.1.4",
     "prettier": "^2.2.0",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
     "solidity-coverage": "^0.7.13",
