--- a/package.json
+++ b/package.json
@@ -60,12 +60,12 @@
     "hardhat": "^2.0.11",
     "hardhat-abi-exporter": "^2.0.8",
     "hardhat-deploy": "^0.9.24",
-    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.0",
     "hardhat-preprocessor": "^0.1.0",
     "hardhat-spdx-license-identifier": "^2.0.0",
     "hardhat-typechain": "^0.3.5",
-    "hardhat-watcher": "^2.0.0",
+    "hardhat-watcher": "^2.0.0", 
     "mocha": "^9.1.4",
     "prettier": "^2.2.0",
     "prettier-plugin-solidity": "^1.0.0-beta.5",
@@ -76,6 +76,8 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "eip-712": "^0.4.3"
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "eip-712": "^0.4.3",
+    "web3": "^1.7.0"
   }
 }
