--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@mistswapdex/core",
+  "name": "@honkswapdex/core",
   "version": "0.0.3",
   "license": "MIT",
   "types": "./types/index.ts",
-  "description": "Core contracts for the MISTswap protocol",
+  "description": "Core contracts for the HONKswap protocol",
   "files": [
     "abi",
     "artifacts",
@@ -15,14 +15,14 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mistswapdex/mistswap.git"
+    "url": "git+https://github.com/honk-world/honkswap.git"
   },
   "bugs": {
-    "url": "https://github.com/mistswapdex/mistswap/issues"
+    "url": "https://github.com/honk-world/honkswap/issues"
   },
-  "homepage": "https://github.com/mistswapdex/mistswap#readme",
+  "homepage": "https://github.com/honk-world/honkswap#readme",
   "keywords": [
-    "mistswap",
+    "honkswap",
     "bitcoin-cash"
   ],
   "scripts": {
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@boringcrypto/boring-solidity": "boringcrypto/BoringSolidity#e06e943",
-    "@mistswapdex/sdk": "^0.0.11",
+    "@honkswapdex/sdk": "^0.0.11",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
